Archive2/0b/c8cf213265bf29/output
main.cpp:6:11: warning: unused parameter 'i' [-Wunused-parameter]
  base(int i) {};
           ^
main.cpp: In constructor 'derivedAB::derivedAB(int)':
main.cpp:9:2: error: 'base::base()' is private
  base(){};
  ^
main.cpp:30:19: error: within this context
  derivedAB(int i) {};
                   ^
main.cpp: At global scope:
main.cpp:30:16: warning: unused parameter 'i' [-Wunused-parameter]
  derivedAB(int i) {};
                ^
main.cpp:30:16: warning: unused parameter 'i' [-Wunused-parameter]
main.cpp:34:27: warning: extra ';' [-Wpedantic]
 derivedAB::~derivedAB() {};
                           ^
